--- a/003_GP_Course_Operators_Booleans.ipynb
+++ b/003_GP_Course_Operators_Booleans.ipynb
@@ -722,7 +722,7 @@
     "\n",
     "The `all` function is an built-in function in Python which returns `True` if all of the elements of a given iterable( List, Dictionary, Tuple, set, etc) are `True` else it returns `False`. \n",
     "\n",
-    "`any` is a function that takes one argument, an iterable of objects that it loops through to evaluate truthiness."
+    "`all` is a function that takes one argument, an iterable of objects that it loops through to evaluate truthiness."
    ]
   },
   {
@@ -743,16 +743,7 @@
    ],
    "source": [
     "iterable = (True, True, False)\n",
-    "all(iterable) # same as True or True or False"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>Just don't:</b> Access sets by indexing, sets are unordered.\n",
-    "</div>"
+    "all(iterable) # same as True and True and False"
    ]
   },
   {
