--- a/020_GP_Exercises_Pandas_Matplotlib.ipynb
+++ b/020_GP_Exercises_Pandas_Matplotlib.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll be doing data analysis on a dataset from Worl Gold Council\n",
+    "We'll be doing data analysis on a dataset from World Gold Council\n",
     "### Major Fiat Currencies Can't Compete With Gold\n",
     "\n",
     "https://www.gold.org/goldhub/data/gold-prices"
@@ -91,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**5. We would like to transform The NaN values preceeding a first float value to that float value for each column**\n",
+    "**5. We would like to transform The NaN values preceeding a first float value to that first float value for each column**\n",
     "\n",
     "hint : <code>np.isnan()</code> method applied to a numeric returns True if NaN else False"
    ]
@@ -121,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**8. Now Since our currencies represent a value against Gold, What would a proper dataframe where we store gold values against currencies, plot this new dataframe and conclude**"
+    "**8. Now Since our currencies represent a value against Gold, What would be a proper dataframe where we store gold values against currencies, plot this new dataframe and conclude**"
    ]
   },
   {
@@ -171,7 +171,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -185,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
